# hook-gym

./: README.md  pyproject.toml
cases/: credential-leaks.yaml  destructive-ops.yaml  file-destruction.yaml  git-hygiene.yaml  network-risks.yaml  permission-escalation.yaml  production-safety.yaml  scope-boundary.yaml  secrets-guard.yaml  sensitive-files.yaml
hook_gym/: __init__.py  cli.py  loader.py  reporter.py  runner.py
