[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hook-gym"
version = "0.1.0"
description = "Test harness for Claude Code hooks — batch-run violation cases against your guardrails"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Makito Chiba" }]
keywords = ["claude-code", "hooks", "guardrails", "testing", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.scripts]
hook-gym = "hook_gym.cli:main"
